2011-05-21  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.md (setjmp): Handle PIC mode and use the hard
	frame pointer.

2011-05-21  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.c (eligible_for_return_delay): Do not return
	false if there are call-saved registers here...
	(sparc_can_use_return_insn_p): ...but here instead.
	(save_or_restore_regs): Fix thinko.
	(sparc_expand_prologue): Use current_function_is_leaf.
	(sparc_frame_pointer_required): Likewise.

2011-05-20  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.h (HAVE_PRE_DECREMENT): Fix typo in macro name.

2011-05-16  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movxf_internal): Disable CONST_DOUBLE
	optimization for CM_MEDIUM and CM_LARGE code models.  Fix usage
	of standard_80387_constant_p.
	(*movxf_internal_nointeger): Ditto.
	(*movdf_internal): Remove dead code-size optimization.
	(*movdf_internal_rex64): Fix usage of standard_80387_constant_p.
	(*movdf_internal_nointeger): Ditto.
	(*movsf_internal): Ditto.
	(floating point move splitters): Ditto.
	* config/i386/constraints.md (G): Ditto.
	* config/i386/i386.c (ix86_preferred_reload_class): Ditto.

2011-05-11  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline
	2011-05-10  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/48857, 48495
	* config/rs6000/rs6000.h (VSX_SCALAR_MODE): Delete.
	(VSX_MODE): Ditto.
	(VSX_MOVE_MODE): Ditto.
	(ALTIVEC_OR_VSX_VECTOR_MODE): New macro, combine all Altivec and
	VSX vector types.  Add V2DImode.
	(HARD_REGNO_CALLER_SAVE_MODE): Use it instead of
	ALTIVEC_VECTOR_MODE and VSX_VECTOR_MODE calls.
	(MODES_TIEABLE_P): Ditto.

	* config/rs6000/rs6000.c (rs6000_emit_move): Use
	ALTIVEC_OR_VSX_MODE instead of ALTIVEC_VECTOR_MODE and
	VSX_VECTOR_MODE.
	(init_cumulative_args): Ditto.
	(rs6000_function_arg_boundary): Ditto.
	(rs6000_function_arg_advance_1): Ditto.
	(rs6000_function_arg): Ditto.
	(rs6000_function_ok_for_sibcall): Ditto.