@@ -1,3 +1,8 @@
+2011-05-25  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/49133
+	* g++.dg/other/pr49133.C: New test.
+
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/init/new32.C: New.
