@@ -1,3 +1,8 @@
+2011-05-25  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/49133
+	* config/i386/sse.md (sse2_loadhpd): Remove shufpd alternative.
+
 2011-05-21  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* config/sparc/sparc.md (setjmp): Handle PIC mode and use the hard
